--- a/kohlrabi.html
+++ b/kohlrabi.html
@@ -19,6 +19,11 @@
             <li>Thin to 15cm apart when 2.5cm tall</li>
         </ul>
     </div>
+
+    <h2>2020</h2>
+
+    <h3>7 Jul 2020</h3>
+    <img src="images/2020-07-20 kohlrabi.jpg" />
 </body>
 
 </html>
