--- a/kale.html
+++ b/kale.html
@@ -18,6 +18,11 @@
             <li>1cm deep in rows 15cm apart</li>
             <li>Thin to 7.5cm apart when 2cm tall</li>
         </ul>
+
+        <h2>2020</h2>
+
+        <h3>7 Jul 2020</h3>
+        <img src="images/2020-07-20 kale.jpg" />
     </div>
 </body>
 
