--- a/chard.html
+++ b/chard.html
@@ -18,6 +18,14 @@
             <li>2.5cm deep in rows 45cm apart</li>
             <li>Thin to 30cm apart when 2cm tall</li>
         </ul>
+
+        <h2>2020</h2>
+
+        <h3>25 Jul 2020</h3>
+        <img src="images/chard1.jpg" />
+        <img src="images/chard2.jpg" />
+
+
     </div>
 </body>
 
