--- a/kale.html
+++ b/kale.html
@@ -16,13 +16,16 @@
         <h2>Planting</h2>
         <ul class="plant-info">
             <li>1cm deep in rows 15cm apart</li>
-            <li>Thin to 7.5cm apart when 2cm tall</li>
+            <li>Thin to 7.5cm apart when 2cm tall (13 per m)</li>
         </ul>
 
         <h2>2020</h2>
 
-        <h3>7 Jul 2020</h3>
+        <h3>20 Jul 2020</h3>
         <img src="images/2020-07-20 kale.jpg" />
+
+        <h3>25 Jul 2020</h3>
+        <img src="images/kale2.jpg" />
     </div>
 </body>
 
