--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             <li><a href="lettuce.html">Lettuce</a></li>
             <li><a href="kohlrabi.html">Kohlrabi</a></li>
 
+            <li>
+                <h2>Fruit</h2>
+            </li>
+            <li><a href="rhubarb.html">Rhubarb</a></li>
+
         </ul>
     </div>
 
