--- a/rhubarb.html
+++ b/rhubarb.html
@@ -16,6 +16,7 @@
         <h2>Planting</h2>
         <ul class="plant-info">
             <li>Split 1 Glaucous Early into 4 plants</li>
+            <li>Soak in water for 1 day before replanting</li>
         </ul>
     </div>
 
