--- a/chard.html
+++ b/chard.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <div id="main">
+    <div>
 
         <h1>Chard</h1>
 
         <h2>Planting</h2>
-        <ul class="plant-info">
+        <ul>
             <li>2.5cm deep in rows 45cm apart</li>
             <li>Thin to 30cm apart when 2cm tall</li>
         </ul>
