--- a/chives.html
+++ b/chives.html
@@ -5,26 +5,19 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="garden.css" />
-    <title>Rhubarb</title>
+    <title>Chives</title>
 </head>
 
 <body>
     <div>
 
-        <h1>Rhubarb</h1>
+        <h1>Chives</h1>
 
         <h2>Planting</h2>
         <ul>
-            <li>Split 1 Glaucous Early into 4 plants</li>
-            <li>Soak in water for 1 day before replanting</li>
+            <li>Sew Mar-Jun</li>
         </ul>
     </div>
-
-    <h2>2021</h2>
-
-    <h3>3 Mar 2021</h3>
-    <img src="images/2021-03-20 rhubarb 01.jpg" />
-    <img src="images/2021-03-20 rhubarb 02.jpg" />
 </body>
 
 </html>
