--- a/dill.html
+++ b/dill.html
@@ -9,12 +9,13 @@
 </head>
 
 <body>
-    <div id="main">
+    <div>
 
         <h1>Dill</h1>
 
         <h2>Planting</h2>
-        <ul class="plant-info">
+        <ul>
+            <li>Sew Mar-July</li>
             <li>1cm deep in rows 15cm apart</li>
             <li>Thin to 15cm apart (or 10cm if in pot)</li>
             <li>Hates having roots disturbed so do not move</li>
