--- a/index.html
+++ b/index.html
@@ -12,27 +12,30 @@
 
 <body>
 
-    <div id="main">
+    <div class="index">
 
         <h1>Garden</h1>
 
-        <ul id="plants">
+        <ul>
+            <li><a href="seasons.html">Seasons</a></li>
 
             <li>
                 <h2>Herbs</h2>
             </li>
-            <li><a href="parsley.html">Parsley</a></li>
             <li><a href="dill.html">Dill</a></li>
-            <li><a href="sage.html">Sage</a></li>
+            <li><a href="mint.html">Mint</a></li>
+            <li><a href="parsley.html">Parsley</a></li>
             <li><a href="rosemary.html">Rosemary</a></li>
+            <li><a href="sage.html">Sage</a></li>
 
             <li>
                 <h2>Veg</h2>
             </li>
-            <li><a href="kale.html">Kale</a></li>
             <li><a href="chard.html">Chard</a></li>
-            <li><a href="lettuce.html">Lettuce</a></li>
+            <li><a href="kale.html">Kale</a></li>
             <li><a href="kohlrabi.html">Kohlrabi</a></li>
+            <li><a href="lettuce.html">Lettuce</a></li>
+            <li><a href="rocket.html">Rocket</a></li>
 
             <li>
                 <h2>Fruit</h2>
