--- a/kale.html
+++ b/kale.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <div id="main">
+    <div>
 
         <h1>Kale</h1>
 
         <h2>Planting</h2>
-        <ul class="plant-info">
+        <ul>
             <li>1cm deep in rows 15cm apart</li>
             <li>Thin to 7.5cm apart when 2cm tall (13 per m)</li>
         </ul>
