--- a/lettuce.html
+++ b/lettuce.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <div id="main">
+    <div>
 
         <h1>Lettuce</h1>
 
         <h2>Planting</h2>
-        <ul class="plant-info">
+        <ul>
             <li>1.3cm deep in rows 30cm apart</li>
             <li>Thin to 30cm apart as they grow</li>
         </ul>
