--- a/parsley.html
+++ b/parsley.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <div id="main">
+    <div>
 
         <h1>Parsley</h1>
 
         <h2>Planting</h2>
-        <ul class="plant-info">
-            <li></li>
+        <ul>
+            <li>Sew Mar-Jul</li>
         </ul>
     </div>
 </body>
