--- a/rosemary.html
+++ b/rosemary.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <div id="main">
+    <div>
 
         <h1>Rosemary</h1>
 
-        <h2>Planting</h2>
-        <ul class="plant-info">
-            <li></li>
+        <h2>Pruning</h2>
+        <ul>
+            <li>Mid-spring / April after last frost</li>
         </ul>
     </div>
 </body>
