--- a/sage.html
+++ b/sage.html
@@ -9,13 +9,15 @@
 </head>
 
 <body>
-    <div id="main">
+    <div>
 
         <h1>Sage</h1>
 
-        <h2>Planting</h2>
-        <ul class="plant-info">
-            <li></li>
+        <h2>Pruning</h2>
+        <ul>
+            <li>Early spring / Mar</li>
+            <li>Can prune stems to 5cm</li>
+            <li>Don't prune if new growth already started</li>
         </ul>
     </div>
 </body>
