--- a/template.html
+++ b/template.html
@@ -5,25 +5,19 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="garden.css" />
-    <title>Kohlrabi</title>
+    <title>a</title>
 </head>
 
 <body>
     <div>
 
-        <h1>Kohlrabi</h1>
+        <h1>a</h1>
 
-        <h2>Planting</h2>
+        <h2>a</h2>
         <ul>
-            <li>1cm deep in rows 30cm apart</li>
-            <li>Thin to 15cm apart when 2.5cm tall</li>
+            <li></li>
         </ul>
     </div>
-
-    <h2>2020</h2>
-
-    <h3>20 Jul 2020</h3>
-    <img src="images/2020-07-20 kohlrabi.jpg" />
 </body>
 
 </html>
