--- a/hypericum.html
+++ b/hypericum.html
@@ -5,17 +5,22 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="garden.css" />
-    <title>Rosemary</title>
+    <title>Hypericum</title>
 </head>
 
 <body>
     <div>
 
-        <h1>Rosemary</h1>
+        <h1>Hypericum</h1>
 
         <h2>Prune</h2>
         <ul>
-            <li>Mid-spring / April after last frost</li>
+            <li>shape in early spring / Mar</li>
+        </ul>
+
+        <h2>Notes</h2>
+        <ul>
+            <li>flowers mid to late summer / Jul-Aug</li>
         </ul>
     </div>
 </body>
