--- a/rhubarb.html
+++ b/rhubarb.html
@@ -13,9 +13,16 @@
 
         <h1>Rhubarb</h1>
 
-        <h2>Planting</h2>
+        <h2>Harvest</h2>
         <ul>
-            <li>Split 1 Glaucous Early into 4 plants</li>
+            <li>Mar/Apr - early varieties</li>
+            <li>Apr/May - maincrop</li>
+            <li>not after June</li>
+        </ul>
+
+        <h2>Divide</h2>
+        <ul>
+            <li>November best time</li>
             <li>Soak in water for 1 day before replanting</li>
         </ul>
     </div>
@@ -23,6 +30,9 @@
     <h2>2021</h2>
 
     <h3>3 Mar 2021</h3>
+    <ul>
+        <li>Split 1 Glaucous Early into 4 plants</li>
+    </ul>
     <img src="images/2021-03-20 rhubarb 01.jpg" />
     <img src="images/2021-03-20 rhubarb 02.jpg" />
 </body>
