--- a/sage.html
+++ b/sage.html
@@ -13,7 +13,7 @@
 
         <h1>Sage</h1>
 
-        <h2>Pruning</h2>
+        <h2>Prune</h2>
         <ul>
             <li>Early spring / Mar</li>
             <li>Can prune stems to 5cm</li>
