--- a/buddleia.html
+++ b/buddleia.html
@@ -5,17 +5,19 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="garden.css" />
-    <title>Rosemary</title>
+    <title>Buddleia</title>
 </head>
 
 <body>
     <div>
 
-        <h1>Rosemary</h1>
+        <h1>Buddleia</h1>
 
         <h2>Prune</h2>
         <ul>
-            <li>Mid-spring / April after last frost</li>
+            <li>Feb/Mar</li>
+            <li>cut back stems to 30cm above ground</li>
+            <li>can prune to 1m above initially to help visibility</li>
         </ul>
     </div>
 </body>
