--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
         <ul>
             <li><a href="seasons.html">Seasons</a></li>
+            <li><a href="year.html">Year</a></li>
 
             <li>
                 <h2>Herbs</h2>
@@ -41,6 +42,12 @@
                 <h2>Fruit</h2>
             </li>
             <li><a href="rhubarb.html">Rhubarb</a></li>
+
+            <li>
+                <h2>Shrubs</h2>
+            </li>
+            <li><a href="buddleia.html">Buddleia</a></li>
+            <li><a href="hypericum.html">Hypericum</a></li>
 
         </ul>
     </div>
