--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             </li>
             <li><a href="buddleia.html">Buddleia</a></li>
             <li><a href="hypericum.html">Hypericum</a></li>
+            <li><a href="roses.html">Roses</a></li>
 
         </ul>
     </div>
