--- a/year.html
+++ b/year.html
@@ -15,12 +15,16 @@
 
         <h2>Jan - mid winter</h2>
         <ul>
-            <li>weeding</li>
+            <li>Weeding</li>
         </ul>
 
         <h2>Feb - late winter</h2>
         <ul>
-            <li>weeding</li>
+            <li>Weeding</li>
+        </ul>
+        <h3>Prune</h3>
+        <ul>
+            <li>Roses</li>
         </ul>
 
         <h2>Mar - early spring</h2>
