--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <li><a href="buddleia.html">Buddleia</a></li>
             <li><a href="hypericum.html">Hypericum</a></li>
             <li><a href="roses.html">Roses</a></li>
+            <li><a href="lavender.html">Lavender</a></li>
 
         </ul>
     </div>
