--- a/year.html
+++ b/year.html
@@ -15,24 +15,30 @@
 
         <h2>Jan - mid winter</h2>
         <ul>
-            <li>Weeding</li>
+            <li>weeding & tidying</li>
         </ul>
 
         <h2>Feb - late winter</h2>
         <ul>
-            <li>Weeding</li>
+            <li>weeding & tidying</li>
         </ul>
         <h3>Prune</h3>
         <ul>
             <li>Roses</li>
+            <li>Cistus</li>
         </ul>
 
         <h2>Mar - early spring</h2>
+        <ul>
+            <li>mulch Rhubarb</li>
+        </ul>
         <h3>Prune</h3>
         <ul>
             <li>Buddliea</li>
             <li>Hypericum</li>
             <li>Sage</li>
+            <li>Hebe</li>
+            <li>Lavender</li>
         </ul>
 
         <h2>Apr - mid spring</h2>
