--- a/year.html
+++ b/year.html
@@ -13,12 +13,12 @@
 
         <h1>Year</h1>
 
-        <h2>Jan - mid winter</h2>
+        <h2 class="season-winter">Jan - mid winter</h2>
         <ul>
             <li>weeding & tidying</li>
         </ul>
 
-        <h2>Feb - late winter</h2>
+        <h2 class="season-winter">Feb - late winter</h2>
         <ul>
             <li>weeding & tidying</li>
         </ul>
@@ -28,7 +28,7 @@
             <li>Cistus</li>
         </ul>
 
-        <h2>Mar - early spring</h2>
+        <h2 class="season-spring">Mar - early spring</h2>
         <ul>
             <li>mulch Rhubarb</li>
         </ul>
@@ -41,7 +41,7 @@
             <li>Lavender</li>
         </ul>
 
-        <h2>Apr - mid spring</h2>
+        <h2 class="season-spring">Apr - mid spring</h2>
         <h3>Sew</h3>
         <ul>
             <li>Chives</li>
