--- a/chives.html
+++ b/chives.html
@@ -17,6 +17,11 @@
         <ul>
             <li>Sew Mar-Jun</li>
         </ul>
+
+        <h2>Harvest</h2>
+        <ul>
+            <li>cut leaves with scissors snipping close to the base</li>
+        </ul>
     </div>
 </body>
 
