--- a/lavender.html
+++ b/lavender.html
@@ -15,7 +15,7 @@
 
         <h2>Prune</h2>
         <ul>
-            <li>late summer: trim after flowering</li>
+            <li>late summer: trim to tidy after flowering</li>
             <li>early spring: prune to shape </li>
             <li>don't prune to hard wood as won't regrow</li>
             <li>replace untidy plants from seedlings</li>
