--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
             <li><a href="roses.html">Roses</a></li>
             <li><a href="lavender.html">Lavender</a></li>
 
+            <li>
+                <h2>Flowers</h2>
+            </li>
+            <li><a href="daffodils.html">Daffodils</a></li>
+
         </ul>
     </div>
 
