--- a/year.html
+++ b/year.html
@@ -26,6 +26,7 @@
         <ul>
             <li>Roses</li>
             <li>Cistus</li>
+            <li>Hawthorn</li>
         </ul>
 
         <h2 class="season-spring">Mar - early spring</h2>
