--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="parsley.html">Parsley</a></li>
             <li><a href="rosemary.html">Rosemary</a></li>
             <li><a href="sage.html">Sage</a></li>
+            <li><a href="thyme.html">Thyme</a></li>
 
             <li>
                 <h2>Veg</h2>
