--- a/sage.html
+++ b/sage.html
@@ -13,6 +13,11 @@
 
         <h1>Sage</h1>
 
+        <h2>Care</h2>
+        <ul>
+            <li>drought-loving Mediterranean herb</li>
+        </ul>
+
         <h2>Prune</h2>
         <ul>
             <li>Early spring / Mar</li>
