--- a/mint.html
+++ b/mint.html
@@ -13,9 +13,16 @@
 
         <h1>Mint</h1>
 
-        <h2>Mint</h2>
+        <h2>Care</h2>
         <ul>
-            <li></li>
+            <li>best grown in pot so does not compete with other plants</li>
+            <li>or plant in bottomless bucket in ground</li>
+        </ul>
+
+        <h2>Prune</h2>
+        <ul>
+            <li>cut back to ground level in autumn / Oct</li>
+            <li>divide in autumn / Oct, discard centre and use outer roots</li>
         </ul>
     </div>
 </body>
