--- a/thyme.html
+++ b/thyme.html
@@ -5,22 +5,25 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="garden.css" />
-    <title>Rosemary</title>
+    <title>Thyme</title>
 </head>
 
 <body>
     <div>
 
-        <h1>Rosemary</h1>
+        <h1>Thyme</h1>
 
         <h2>Care</h2>
         <ul>
             <li>drought-loving Mediterranean herb</li>
+            <li>plants become woody and need replacing after 3 years</li>
+            <li>doesn't need watering</li>
         </ul>
 
-        <h2>Prune</h2>
+        <h2>Planting</h2>
         <ul>
-            <li>Mid-spring / April after last frost</li>
+            <li>in well-drained soil in full sun</li>
+            <li>easiest to buy plants than sew</li>
         </ul>
     </div>
 </body>
