--- a/template.html
+++ b/template.html
@@ -5,18 +5,34 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="garden.css" />
-    <title>a</title>
+    <title>NAME</title>
 </head>
 
 <body>
     <div>
 
-        <h1>a</h1>
+        <h1>NAME</h1>
 
-        <h2>a</h2>
+        <h2>Care</h2>
         <ul>
             <li></li>
         </ul>
+
+        <h2>Planting</h2>
+        <ul>
+            <li></li>
+        </ul>
+
+        <h2>Prune</h2>
+        <ul>
+            <li></li>
+        </ul>
+
+        <h2>Harvest</h2>
+        <ul>
+            <li></li>
+        </ul>
+
     </div>
 </body>
 
