--- a/year.html
+++ b/year.html
@@ -23,40 +23,43 @@
             <li>weeding & tidying</li>
         </ul>
         <h3>Prune</h3>
-        <ul>
-            <li>Roses</li>
-            <li>Cistus</li>
-            <li>Hawthorn</li>
+        <ul class="no-dots">
+            <li><input type="checkbox" checked />Roses</li>
+            <li><input type="checkbox" checked />Cistus</li>
+            <li><input type="checkbox" checked />Cotinus</li>
+            <li><input type="checkbox" />Elder</li>
+            <li><input type="checkbox" />Hawthorn</li>
         </ul>
 
         <h2 class="season-spring">Mar - early spring</h2>
-        <ul>
-            <li>mulch Rhubarb</li>
+        <ul class="no-dots">
+            <li><input type="checkbox" />mulch Rhubarb</li>
         </ul>
         <h3>Prune</h3>
-        <ul>
-            <li>Buddliea</li>
-            <li>Hypericum</li>
-            <li>Sage</li>
-            <li>Hebe</li>
-            <li>Lavender</li>
+        <ul class="no-dots">
+            <li><input type="checkbox" checked />Buddliea</li>
+            <li><input type="checkbox" checked />Berberis</li>
+            <li><input type="checkbox" checked />Hebe</li>
+            <li><input type="checkbox" checked />Hypericum</li>
+            <li><input type="checkbox" checked />Lavender</li>
+            <li><input type="checkbox" />Sage</li>
         </ul>
 
         <h2 class="season-spring">Apr - mid spring</h2>
         <h3>Sew</h3>
-        <ul>
-            <li>Chives</li>
-            <li>Parsely</li>
-            <li>Dill</li>
-            <li>Rocket</li>
+        <ul class="no-dots">
+            <li><input type="checkbox" />Chives</li>
+            <li><input type="checkbox" />Parsely</li>
+            <li><input type="checkbox" />Dill</li>
+            <li><input type="checkbox" />Rocket</li>
         </ul>
         <h3>Plant</h3>
-        <ul>
-            <li>Mint</li>
+        <ul class="no-dots">
+            <li><input type="checkbox" />Mint</li>
         </ul>
         <h3>Prune</h3>
-        <ul>
-            <li>Rosemary</li>
+        <ul class="no-dots">
+            <li><input type="checkbox" />Rosemary</li>
         </ul>
 
     </div>
