--- a/rhubarb.html
+++ b/rhubarb.html
@@ -13,6 +13,12 @@
 
         <h1>Rhubarb</h1>
 
+        <h2>Mulch</h2>
+        <ul>
+            <li>Early spring / Mar</li>
+            <li>spread around plant avoiding leaves and crown, then dig in a little with trowel</li>
+        </ul>
+
         <h2>Harvest</h2>
         <ul>
             <li>Mar/Apr - early varieties</li>
@@ -27,11 +33,19 @@
         </ul>
     </div>
 
-    <h2>2021</h2>
+    <h2>2022</h2>
+    <h3>Mar 2022</h3>
+    <ul>
+        <li>Mulched with rotted manure</li>
+    </ul>
+    <img src="images/rhubarb1.jpg" />
 
-    <h3>3 Mar 2021</h3>
+
+    <h2>2021</h2>
+    <h3>Mar 2021</h3>
     <ul>
         <li>Split 1 Glaucous Early into 4 plants</li>
+        <li>Top 2 survived, other 2 didn't</li>
     </ul>
     <img src="images/2021-03-20 rhubarb 01.jpg" />
     <img src="images/2021-03-20 rhubarb 02.jpg" />
