--- a/sage.html
+++ b/sage.html
@@ -21,9 +21,18 @@
         <h2>Prune</h2>
         <ul>
             <li>Early spring / Mar</li>
-            <li>Can prune stems to 5cm</li>
+            <li>Prune stems to 10-15cm</li>
             <li>Don't prune if new growth already started</li>
         </ul>
+
+        <h2>2022</h2>
+        <h3>Mar 2022</h3>
+        <ul>
+            <li>Pruned and runner replanted</li>
+        </ul>
+        <img src="images/sage1.jpg" />
+        <img src="images/sage2.jpg" />
+
     </div>
 </body>
 
