--- a/year.html
+++ b/year.html
@@ -33,7 +33,7 @@
 
         <h2 class="season-spring">Mar - early spring</h2>
         <ul class="no-dots">
-            <li><input type="checkbox" />mulch Rhubarb</li>
+            <li><input type="checkbox" checked />mulch Rhubarb</li>
         </ul>
         <h3>Prune</h3>
         <ul class="no-dots">
@@ -42,7 +42,7 @@
             <li><input type="checkbox" checked />Hebe</li>
             <li><input type="checkbox" checked />Hypericum</li>
             <li><input type="checkbox" checked />Lavender</li>
-            <li><input type="checkbox" />Sage</li>
+            <li><input type="checkbox" checked />Sage</li>
         </ul>
 
         <h2 class="season-spring">Apr - mid spring</h2>
