--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li>
                 <h2>Herbs</h2>
             </li>
+            <li><a href="bay.html">Bay</a></li>
             <li><a href="chives.html">Chives</a></li>
             <li><a href="dill.html">Dill</a></li>
             <li><a href="mint.html">Mint</a></li>
