--- a/thyme.html
+++ b/thyme.html
@@ -25,6 +25,14 @@
             <li>in well-drained soil in full sun</li>
             <li>easiest to buy plants than sew</li>
         </ul>
+
+        <h2>2022</h2>
+        <h3>Mar 2022</h3>
+        <ul>
+            <li>Planted, very pot-bound</li>
+        </ul>
+        <img src="images/thyme1.jpg" />
+
     </div>
 </body>
 
