--- a/bay.html
+++ b/bay.html
@@ -11,12 +11,17 @@
 <body>
     <div>
 
-        <h1>Bay tree / Laurel nobilis</h1>
+        <h1>Bay tree / Laurus nobilis</h1>
 
         <h2>Prune</h2>
         <ul>
             <li>May - Jul</li>
         </ul>
+
+        <h2>2022</h2>
+        <h3>Mar 2022</h3>
+        <img src="images/bay1.jpg" />
+        <img src="images/bay2.jpg" />
 
     </div>
 </body>
