--- a/dill.html
+++ b/dill.html
@@ -20,6 +20,12 @@
             <li>Thin to 15cm apart (or 10cm if in pot)</li>
             <li>Hates having roots disturbed so do not move</li>
         </ul>
+
+        <h2>2020</h2>
+        <h3>Sep 2020</h3>
+        <img src="images/dill1.jpg" />
+
+
     </div>
 </body>
 
