--- a/mint.html
+++ b/mint.html
@@ -24,6 +24,11 @@
             <li>cut back to ground level in autumn / Oct</li>
             <li>divide in autumn / Oct, discard centre and use outer roots</li>
         </ul>
+
+        <h2>2022</h2>
+        <h3>Mar 2022</h3>
+        <img src="images/mint1.jpg" />
+
     </div>
 </body>
 
