--- a/template.html
+++ b/template.html
@@ -33,6 +33,13 @@
             <li></li>
         </ul>
 
+        <h2>2021</h2>
+        <h3>Mar 2021</h3>
+        <ul>
+            <li></li>
+        </ul>
+        <img src="images/.jpg" />
+
     </div>
 </body>
 
