--- a/year.html
+++ b/year.html
@@ -27,7 +27,7 @@
             <li><input type="checkbox" checked />Roses</li>
             <li><input type="checkbox" checked />Cistus</li>
             <li><input type="checkbox" checked />Cotinus</li>
-            <li><input type="checkbox" />Elder</li>
+            <li><input type="checkbox" checked />Elder</li>
             <li><input type="checkbox" />Hawthorn</li>
         </ul>
 
@@ -55,7 +55,7 @@
         </ul>
         <h3>Plant</h3>
         <ul class="no-dots">
-            <li><input type="checkbox" />Mint</li>
+            <li><input type="checkbox" checked />Mint</li>
         </ul>
         <h3>Prune</h3>
         <ul class="no-dots">
