--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <li>
                 <h2>Flowers</h2>
             </li>
+            <li><a href="crocus.html">Crocuses</a></li>
             <li><a href="daffodils.html">Daffodils</a></li>
 
         </ul>
