--- a/year.html
+++ b/year.html
@@ -17,6 +17,9 @@
         <ul>
             <li>weeding & tidying</li>
         </ul>
+        <ul class="no-dots">
+            <li><input type="checkbox" checked />Trees</li>
+        </ul>
 
         <h2 class="season-winter">Feb - late winter</h2>
         <ul>
@@ -24,11 +27,11 @@
         </ul>
         <h3>Prune</h3>
         <ul class="no-dots">
-            <li><input type="checkbox" checked />Roses</li>
             <li><input type="checkbox" checked />Cistus</li>
             <li><input type="checkbox" checked />Cotinus</li>
             <li><input type="checkbox" checked />Elder</li>
-            <li><input type="checkbox" />Hawthorn</li>
+            <li><input type="checkbox" checked />Hawthorn</li>
+            <li><input type="checkbox" checked />Roses</li>
         </ul>
 
         <h2 class="season-spring">Mar - early spring</h2>
@@ -60,6 +63,12 @@
         <h3>Prune</h3>
         <ul class="no-dots">
             <li><input type="checkbox" />Rosemary</li>
+        </ul>
+
+        <h2 class="season-autumn">Oct - mid autumn</h2>
+        <h3>Plant</h3>
+        <ul class="no-dots">
+            <li><input type="checkbox" />Crocuses</li>
         </ul>
 
     </div>
