--- a/daffodils.html
+++ b/daffodils.html
@@ -17,6 +17,12 @@
         <p>Split 1 bunch into 6</p>
         <img src="images/daffodils1.jpg" />
 
+
+        <h2>2022 Mar</h2>
+        <p>Clump to split in Oct</p>
+        <img src="images/daffodils2.jpg" />
+        <img src="images/daffodils3.jpg" />
+
     </div>
 </body>
 
