--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
             <li><a href="lavender.html">Lavender</a></li>
 
             <li>
-                <h2>Flowers</h2>
+                <h2>Bulbs</h2>
             </li>
             <li><a href="crocus.html">Crocuses</a></li>
             <li><a href="daffodils.html">Daffodils</a></li>
+            <li><a href="snowdrops.html">Snowdrops</a></li>
 
         </ul>
     </div>
