--- a/year.html
+++ b/year.html
@@ -47,6 +47,10 @@
             <li><input type="checkbox" checked />Lavender</li>
             <li><input type="checkbox" checked />Sage</li>
         </ul>
+        <h3>Move</h3>
+        <ul class="no-dots">
+            <li><input type="checkbox" checked />Snowdrops</li>
+        </ul>
 
         <h2 class="season-spring">Apr - mid spring</h2>
         <h3>Sew</h3>
