--- a/year.html
+++ b/year.html
@@ -31,11 +31,13 @@
             <li><input type="checkbox" checked />Cotinus</li>
             <li><input type="checkbox" checked />Elder</li>
             <li><input type="checkbox" checked />Hawthorn</li>
+            <li><input type="checkbox" checked />Lonicera</li>
             <li><input type="checkbox" checked />Roses</li>
         </ul>
 
         <h2 class="season-spring">Mar - early spring</h2>
         <ul class="no-dots">
+            <li><input type="checkbox" />mow lawn</li>
             <li><input type="checkbox" checked />mulch Rhubarb</li>
         </ul>
         <h3>Prune</h3>
@@ -73,6 +75,10 @@
         <h3>Plant</h3>
         <ul class="no-dots">
             <li><input type="checkbox" />Crocuses</li>
+        </ul>
+        <h3>Move</h3>
+        <ul class="no-dots">
+            <li><input type="checkbox" />Daffodils</li>
         </ul>
 
     </div>
