--- a/house-clean.html
+++ b/house-clean.html
@@ -13,62 +13,75 @@
 
         <h1>Cleaning</h1>
 
+        <ul>
+            <li>leave bleach for 15 mins</li>
+        </ul>
+
+
         <h2>Blinds</h2>
-        <table>
+        <table class="blinds">
             <thead>
                 <tr>
                     <th class="text-left">Room</th>
                     <th>Size</th>
                     <th>New</th>
                     <th>Cleaned</th>
+                    <th>Comments</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td class="subheading" colspan="4">Downstairs</td>
+                    <td class="subheading" colspan="5">Downstairs</td>
                 </tr>
                 <tr>
                     <td>Utility</td>
                     <td>3</td>
-                    <td></td>
+                    <td>-</td>
                     <td>Feb 2022</td>
+                    <td>Minor mould patches</td>
                 </tr>
                 <tr>
                     <td>Kitchen</td>
                     <td>6</td>
                     <td>Nov 2020</td>
                     <td></td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>Toilet</td>
                     <td>3</td>
-                    <td></td>
-                    <td>Oct 2020</td>
+                    <td>-</td>
+                    <td>Mar 2022</td>
+                    <td>No mould. Washed whole blind</td>
                 </tr>
                 <tr>
-                    <td class="subheading" colspan="4">Upstairs</td>
+                    <td class="subheading" colspan="5">Upstairs</td>
                 </tr>
                 <tr>
                     <td>Bedroom D</td>
                     <td>6</td>
-                    <td></td>
-                    <td></td>
+                    <td>-</td>
+                    <td>Mar 2022</td>
+                    <td>Mould patches throughout. Sprayed mould patches</td>
                 </tr>
                 <tr>
                     <td>Bedroom J</td>
                     <td>6</td>
+                    <td>-</td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>Bedroom R</td>
                     <td>6</td>
+                    <td>-</td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>Bedroom C</td>
                     <td>6</td>
+                    <td>Nov 2021</td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -78,55 +91,72 @@
         <hr class="mt-5">
 
         <h2>Curtains</h2>
-        <table>
+        <table class="curtains">
             <thead>
                 <tr>
                     <th class="text-left">Room</th>
                     <th>Cleaned</th>
+                    <th>Comments</th>
                 </tr>
             </thead>
             <tbody>
             <tbody>
                 <tr>
-                    <td class="subheading" colspan="4">Downstairs</td>
+                    <td class="subheading" colspan="3">Downstairs</td>
                 </tr>
                 <tr>
                     <td>Dining room patio doors</td>
+                    <td>-</td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>Dining room side window</td>
+                    <td>-</td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>Living room side window</td>
+                    <td>-</td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>Living room front window</td>
+                    <td>-</td>
                     <td></td>
                 </tr>
                 <tr>
-                    <td class="subheading" colspan="4">Upstairs</td>
+                    <td class="subheading" colspan="3">Upstairs</td>
                 </tr>
                 <tr>
                     <td>Bedroom D</td>
-                    <td></td>
+                    <td>Mar 2022</td>
+                    <td>Mould in patches at bottom of curtain.<br>Spray mould patches with bleach on both sides of
+                        lining; rinse whole curtain in warm water</td>
                 </tr>
                 <tr>
                     <td>Bedroom J</td>
-                    <td></td>
+                    <td>Oct 2020</td>
+                    <td>Shrunk at 40&deg;C try at 30&deg;C next time</td>
                 </tr>
                 <tr>
                     <td>Bedroom R</td>
-                    <td></td>
+                    <td>Nov 2021</td>
+                    <td>New Nov 2021</td>
                 </tr>
                 <tr>
                     <td>Bedroom C</td>
+                    <td>-</td>
                     <td></td>
                 </tr>
             </tbody>
         </table>
+
+        <h2>Pics</h2>
+        <ul>
+            <li>hand sideways to dry</li>
+        </ul>
+        <img src="images/curtains1.jpg" />
+
 
     </div>
 </body>
