--- a/house-clean.html
+++ b/house-clean.html
@@ -153,7 +153,7 @@
 
         <h2>Pics</h2>
         <ul>
-            <li>hand sideways to dry</li>
+            <li>hang sideways to dry</li>
         </ul>
         <img src="images/curtains1.jpg" />
 
