--- a/house-clean.html
+++ b/house-clean.html
@@ -17,6 +17,16 @@
             <li>leave bleach for 15 mins</li>
         </ul>
 
+        <hr class="mt-5">
+
+        <h2>Doors &amp; windows</h2>
+        <h3>Upstairs</h3>
+        <ul>
+            <li>Mar 2022 all windows </li>
+        </ul>
+        <h3>Downstairs</h3>
+
+        <hr class="mt-5">
 
         <h2>Blinds</h2>
         <table class="blinds">
@@ -52,7 +62,7 @@
                     <td>3</td>
                     <td>-</td>
                     <td>Mar 2022</td>
-                    <td>No mould. Washed whole blind</td>
+                    <td>No mould. Washed whole blind. Next time cut blind material to reduce length.</td>
                 </tr>
                 <tr>
                     <td class="subheading" colspan="5">Upstairs</td>
@@ -130,7 +140,8 @@
                 <tr>
                     <td>Bedroom D</td>
                     <td>Mar 2022</td>
-                    <td>Mould in patches at bottom of curtain.<br>Spray mould patches with bleach on both sides of
+                    <td>Mould in patches at bottom of curtain lining.<br>Spray mould patches with bleach on both sides
+                        of
                         lining; rinse whole curtain in warm water</td>
                 </tr>
                 <tr>
@@ -150,6 +161,8 @@
                 </tr>
             </tbody>
         </table>
+
+        <hr class="mt-5">
 
         <h2>Pics</h2>
         <ul>
