--- a/house-clean.html
+++ b/house-clean.html
@@ -22,7 +22,8 @@
         <h2>Doors &amp; windows</h2>
         <h3>Upstairs</h3>
         <ul>
-            <li>Mar 2022 all windows </li>
+            <li>Mar 2022 all windows</li>
+            <li>Mar 2022 Mouldy areas above D window</li>
         </ul>
         <h3>Downstairs</h3>
 
