--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
             <li><a href="daffodils.html">Daffodils</a></li>
             <li><a href="snowdrops.html">Snowdrops</a></li>
 
+            <li>
+                <h2>Flowers</h2>
+            </li>
+            <li><a href="asters.html">Asters</a></li>
         </ul>
     </div>
 
