--- a/year.html
+++ b/year.html
@@ -52,6 +52,7 @@
         <h3>Move</h3>
         <ul class="no-dots">
             <li><input type="checkbox" checked />Snowdrops</li>
+            <li><input type="checkbox" checked />Asters</li>
         </ul>
 
         <h2 class="season-spring">Apr - mid spring</h2>
