--- a/house-clean.html
+++ b/house-clean.html
@@ -14,7 +14,25 @@
         <h1>Cleaning</h1>
 
         <ul>
+            <li>spray bleach onto sponge in bucket then apply</li>
             <li>leave bleach for 15 mins</li>
+        </ul>
+
+        <hr class="mt-5">
+
+        <h2>Cleaning</h2>
+        <h3>Utility room</h3>
+        <ul>
+            <li>Mar 2022 mould in cupboard</li>
+            <li>Mar 2022 mould under shoe racks</li>
+        </ul>
+        <h3>Dining room</h3>
+        <ul>
+            <li>Mar 2022 behind bookshelves</li>
+        </ul>
+        <h3>Living room</h3>
+        <ul>
+            <li>Mar 2022 mould behind sideboard</li>
         </ul>
 
         <hr class="mt-5">
@@ -23,9 +41,13 @@
         <h3>Upstairs</h3>
         <ul>
             <li>Mar 2022 all windows</li>
-            <li>Mar 2022 Mouldy areas above D window</li>
+            <li>Mar 2022 mould above D window</li>
         </ul>
         <h3>Downstairs</h3>
+        <ul>
+            <li>Mar 2022 mould above kitchen window</li>
+            <li>Mar 2022 mould above dining window and on ceiling</li>
+        </ul>
 
         <hr class="mt-5">
 
