--- a/house-clean.html
+++ b/house-clean.html
@@ -28,11 +28,13 @@
         </ul>
         <h3>Dining room</h3>
         <ul>
-            <li>Feb 2022 behind bookshelves</li>
+            <li>Feb 2022 behind outer wall bookshelves</li>
+            <li>behind inner wall bookshelves</li>
         </ul>
         <h3>Living room</h3>
         <ul>
-            <li>Mar 2022 mould behind sideboard</li>
+            <li>Mar 2022 mould behind sideboard &amp; TV</li>
+            <li>Behind sofas</li>
         </ul>
 
         <hr class="mt-5">
@@ -77,7 +79,7 @@
                     <td>Kitchen</td>
                     <td>6</td>
                     <td>Nov 2020</td>
-                    <td></td>
+                    <td>-</td>
                     <td></td>
                 </tr>
                 <tr>
@@ -101,21 +103,21 @@
                     <td>Bedroom J</td>
                     <td>6</td>
                     <td>-</td>
-                    <td></td>
+                    <td>-</td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>Bedroom R</td>
                     <td>6</td>
                     <td>-</td>
-                    <td></td>
+                    <td>-</td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>Bedroom C</td>
                     <td>6</td>
                     <td>Nov 2021</td>
-                    <td></td>
+                    <td>-</td>
                     <td></td>
                 </tr>
             </tbody>
@@ -124,7 +126,13 @@
         <hr class="mt-5">
 
         <h2>Curtains</h2>
-        <table class="curtains">
+        <ol>
+            <li>spray mould patches with bleach on both sides of lining</li>
+            <li>leave bleach for 15 mins</li>
+            <li>rinse whole curtain in warm water</li>
+            <li>wash curtains at 30&deg;C handwash</li>
+        </ol>
+        <table class="curtains mt-3">
             <thead>
                 <tr>
                     <th class="text-left">Room</th>
@@ -163,14 +171,12 @@
                 <tr>
                     <td>Bedroom D</td>
                     <td>Mar 2022</td>
-                    <td>Mould in patches at bottom of curtain lining.<br>Spray mould patches with bleach on both sides
-                        of
-                        lining; rinse whole curtain in warm water</td>
+                    <td>Mould patches at bottom of lining</td>
                 </tr>
                 <tr>
                     <td>Bedroom J</td>
-                    <td>Oct 2020</td>
-                    <td>Shrunk at 40&deg;C try at 30&deg;C next time</td>
+                    <td>Mar 2022</td>
+                    <td>Minor mould patches at bottom of lining</td>
                 </tr>
                 <tr>
                     <td>Bedroom R</td>
@@ -179,20 +185,16 @@
                 </tr>
                 <tr>
                     <td>Bedroom C</td>
-                    <td>-</td>
-                    <td></td>
+                    <td>Mar 2022</td>
+                    <td>No mould</td>
                 </tr>
             </tbody>
         </table>
 
-        <hr class="mt-5">
-
-        <h2>Pics</h2>
-        <ul>
+        <ul class="mt-3">
             <li>hang sideways to dry</li>
         </ul>
         <img src="images/curtains1.jpg" />
-
 
     </div>
 </body>
