--- a/house-clean.html
+++ b/house-clean.html
@@ -24,7 +24,7 @@
         <h3>Utility room</h3>
         <ul>
             <li>Mar 2022 mould in cupboard</li>
-            <li>Oct 2020 mould under shoe racks</li>
+            <li>Mar 2022 mould behind and under shoe racks and dryer</li>
         </ul>
         <h3>Dining room</h3>
         <ul>
@@ -44,6 +44,7 @@
         <ul>
             <li>Mar 2022 all windows</li>
             <li>Mar 2022 mould above D window</li>
+            <li>Mar 2022 mould above C window</li>
         </ul>
         <h3>Downstairs</h3>
         <ul>
@@ -54,6 +55,9 @@
         <hr class="mt-5">
 
         <h2>Blinds</h2>
+        <ul>
+            <li>6ft blinds must be sprayed and rinsed outside on line</li>
+        </ul>
         <table class="blinds">
             <thead>
                 <tr>
@@ -103,8 +107,8 @@
                     <td>Bedroom J</td>
                     <td>6</td>
                     <td>-</td>
-                    <td>-</td>
-                    <td></td>
+                    <td>Mar 2022</td>
+                    <td>Mould patches throughout</td>
                 </tr>
                 <tr>
                     <td>Bedroom R</td>
