--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <h2>Fruit</h2>
             </li>
             <li><a href="rhubarb.html">Rhubarb</a></li>
+            <li><a href="strawberries.html">Strawberries</a></li>
 
             <li>
                 <h2>Shrubs</h2>
