--- a/year.html
+++ b/year.html
@@ -17,6 +17,7 @@
         <ul>
             <li>weeding & tidying</li>
         </ul>
+        <h3>Prune</h3>
         <ul class="no-dots">
             <li><input type="checkbox" checked />Trees</li>
         </ul>
@@ -24,6 +25,9 @@
         <h2 class="season-winter">Feb - late winter</h2>
         <ul>
             <li>weeding & tidying</li>
+        </ul>
+        <ul class="no-dots">
+            <li><input type="checkbox" />mulch raised beds</li>
         </ul>
         <h3>Prune</h3>
         <ul class="no-dots">
@@ -39,6 +43,7 @@
         <ul class="no-dots">
             <li><input type="checkbox" />mow lawn</li>
             <li><input type="checkbox" checked />mulch Rhubarb</li>
+            <li><input type="checkbox" />mulch &amp; tidy strawberries</li>
         </ul>
         <h3>Prune</h3>
         <ul class="no-dots">
