--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="bay.html">Bay</a></li>
             <li><a href="chives.html">Chives</a></li>
             <li><a href="dill.html">Dill</a></li>
+            <li><a href="garlic.html">Garlic</a></li>
             <li><a href="mint.html">Mint</a></li>
             <li><a href="parsley.html">Parsley</a></li>
             <li><a href="rosemary.html">Rosemary</a></li>
@@ -66,6 +67,7 @@
                 <h2>Flowers</h2>
             </li>
             <li><a href="asters.html">Asters</a></li>
+            <li><a href="anemone-ranunculoides.html">Anemone ranunculoides</a></li>
         </ul>
     </div>
 
