--- a/year.html
+++ b/year.html
@@ -77,6 +77,12 @@
             <li><input type="checkbox" />Rosemary</li>
         </ul>
 
+        <h2 class="season-summer">June - early summer</h2>
+        <h3>Move</h3>
+        <ul class="no-dots">
+            <li><input type="checkbox" />Anemone ranunculoides</li>
+        </ul>
+
         <h2 class="season-autumn">Oct - mid autumn</h2>
         <h3>Plant</h3>
         <ul class="no-dots">
