--- a/garlic.html
+++ b/garlic.html
@@ -17,6 +17,7 @@
         <h3>Mar 2022</h3>
         <ul>
             <li>Not certain these are all garlic</li>
+            <li>Clumps separated by veg patch</li>
         </ul>
         <img src="images/garlic1.jpg" />
 
