--- a/house-clean.html
+++ b/house-clean.html
@@ -48,6 +48,7 @@
         </ul>
         <h3>Downstairs</h3>
         <ul>
+            <li>Mar 2022 mould around living room windows</li>
             <li>Mar 2022 mould above kitchen window</li>
             <li>Feb 2022 mould above dining window and on ceiling</li>
         </ul>
@@ -161,13 +162,13 @@
                 </tr>
                 <tr>
                     <td>Living room side window</td>
-                    <td>-</td>
-                    <td></td>
+                    <td>Mar 2022</td>
+                    <td>No mould</td>
                 </tr>
                 <tr>
                     <td>Living room front window</td>
-                    <td>-</td>
-                    <td></td>
+                    <td>Mar 2022</td>
+                    <td>Mould patches on 2 curtain</td>
                 </tr>
                 <tr>
                     <td class="subheading" colspan="3">Upstairs</td>
