--- a/house-clean.html
+++ b/house-clean.html
@@ -40,6 +40,9 @@
         <hr class="mt-5">
 
         <h2>Doors &amp; windows</h2>
+        <ul>
+            <li>paint gaps with white radiator paint</li>
+        </ul>
         <h3>Upstairs</h3>
         <ul>
             <li>Mar 2022 all windows</li>
