--- a/anemone-ranunculoides.html
+++ b/anemone-ranunculoides.html
@@ -22,6 +22,7 @@
         <h3>Mar 2022</h3>
         <img src="images/anemone1.jpg" />
         <img src="images/anemone2.jpg" />
+        <img src="images/anemone3.jpg" />
 
     </div>
 </body>
