--- a/chives.html
+++ b/chives.html
@@ -22,6 +22,10 @@
         <ul>
             <li>cut leaves with scissors snipping close to the base</li>
         </ul>
+
+        <h2>2022 Apr</h2>
+        <p>Ready to harvest</p>
+        <img src="images/chives1.jpg" />
     </div>
 </body>
 
