--- a/kale.html
+++ b/kale.html
@@ -26,6 +26,10 @@
 
         <h3>25 Jul 2020</h3>
         <img src="images/kale2.jpg" />
+
+        <h3>4 Sep 2020</h3>
+        <img src="2020-09-04 kale.jpg" />
+
     </div>
 </body>
 
