--- a/kohlrabi.html
+++ b/kohlrabi.html
@@ -24,6 +24,9 @@
 
     <h3>20 Jul 2020</h3>
     <img src="images/2020-07-20 kohlrabi.jpg" />
+
+    <h3>4 Sep 2020</h3>
+    <img src="images/2020-09-04 kohlrabi.jpg" />
 </body>
 
 </html>
