--- a/chard.html
+++ b/chard.html
@@ -25,6 +25,9 @@
         <img src="images/chard1.jpg" />
         <img src="images/chard2.jpg" />
 
+        <h3>4 Sep 2020</h3>
+        <img src="images/2020-09-04 chard1.jpg" />
+        <img src="images/2020-09-04 chard2.jpg" />
 
     </div>
 </body>
